--- a/templates/index.html
+++ b/templates/index.html
@@ -7,7 +7,7 @@
     <link rel="icon" type="image/x-icon" href="{{ url_for('static', filename='favicon.ico') }}">
     <style>
         body {
-            font-family: Roboto, sans-serif;
+            font-family: Helvetica, sans-serif;
             display: flex;
             flex-direction: column;
             align-items: center;
