Lighten send button hover color

--- a/templates/index.html
+++ b/templates/index.html
@@ -51,7 +51,7 @@
             transition: background 0.3s;
         }
         button:hover {
-            background-color: #333;
+            background-color: #dddddd9a;
         }
         .typing {
             font-style: italic;
