--- a/templates/index.html
+++ b/templates/index.html
@@ -23,7 +23,7 @@
             border: 1px solid black;
             padding: 10px;
             overflow-y: auto;
-            background: rgba(255, 255, 255, 0.8);
+            background: #ffffff;
             border-radius: 10px;
             box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2);
         }
@@ -58,7 +58,6 @@
             color: darkgray;
         }
 
-        /* Snow drop CSS */
         .snowdrop {
             position: absolute;
             top: -10px;
@@ -67,7 +66,6 @@
             background-color: white;
             border-radius: 50%;
             opacity: 0.8;
-            z-index: 1; /* Snowflakes fall behind the input element */
             animation: fall 5s linear infinite;
         }
 
